<resources>
    <string name="app_name">SOMIAPPLI</string>
    <string name="login_activity_MbSpnSystem_hint">Système</string>
    <string name="login_activity_EdtLogin_hint">Identifiant</string>
    <string name="login_activity_BtnConnexion">CONNEXION</string>
    <string name="login_activity_TxtCopyright_text">Copyright © 2021 - SOMINFOR - v.1.0</string>
    <string name="login_activity_Snackbar01_NoServeur">Aucun serveur spécifié.</string>
    <string name="login_activity_Snackbar01_Action">Configurer</string>
    <string name="login_activity_Snackbar01_NoConnexion">Echec connexion au serveur</string>
    <string name="login_activity_Snackbar03_NoAuthentication">Identifiants incorrects</string>
    <string name="settings_activity_TxtParametre_text">URL Serveur</string>
    <string name="settings_activity_NoServer">Pas d\'URL enregistré. Saisir une URL</string>
    <string name="serveur_node_fragment_Title">Mise à jour URL</string>
    <string name="serveur_node_fragment_EdtServeurNodeIp">Nom ou adresse IP du serveur</string>
    <string name="serveur_node_fragment_BtnValider_hint">VALIDER</string>
    <string name="serveur_node_fragment_toast01">Serveur enregistré</string>
    <string name="serveur_node_fragment_toast02">Une erreur s\'est produite</string>
    <string name="serveur_node_fragment_toast03">Modification effectuée</string>
    <string name="title_activity_dashboard">SOMIAPPLI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">Tableau de bord</string>
    <string name="menu_client">Clients</string>
    <string name="menu_produit">Produits</string>
    <string name="menu_devis">Devis</string>
    <string name="menu_commande">Commandes</string>
    <string name="filter_produit_full_dialog_setTitle">Filtrer</string>
    <string name="filter_produit_full_dialog_fragment_MbSpnFamille_hint">Famille</string>
    <string name="filter_produit_full_dialog_fragment_MbSpnSoFamille_hint">Sous-Famille</string>
    <string name="item_devis_TxtNumeroDevis">N° devis</string>
    <string name="item_devis_TxtDateDevis">Date devis</string>
    <string name="item_devis_TxtLieuVente">Lieu vente</string>
    <string name="item_devis_TxtReference">Référence</string>
    <string name="item_devis_TxtPostIt">Post-it</string>
    <string name="activity_fiche_produit_TxtReference">Référence</string>
    <string name="activity_fiche_produit_TxtNumInterne">Numéro interne</string>
    <string name="activity_fiche_produit_TxtMarque">Marque</string>
    <string name="activity_fiche_produit_TxtCategorie">Catégorie</string>
    <string name="activity_fiche_produit_TxtFamille">Famille</string>
    <string name="activity_fiche_produit_TxtSousFamille">Sous-Famille</string>
    <string name="activity_fiche_produit_TxtNatureComptable">Nature Comptable</string>
    <string name="activity_fiche_produit_TxtMagasin">En Magasin</string>
    <string name="activity_fiche_produit_TxtReserve">Réservée</string>
    <string name="activity_fiche_produit_TxtCommande">En Commande</string>
    <string name="activity_fiche_produit_TxtTotStock">Total en stock</string>
    <string name="activity_fiche_produit_TxtPuMoyen">P.U. Moyen</string>
    <string name="activity_fiche_produit_TxtDernierPu">Dernier P.U.</string>
    <string name="activity_fiche_produit_TxtDateEntree">Date dernière entrée</string>
    <string name="activity_fiche_produit_TxtDateSortie">Date dernière sortie</string>
    <string name="activity_fiche_produit_TxtDateInventaire">Date dernier inventaire</string>
    <string name="activity_fiche_produit_TxtPoidsUnitaire">Poids Unitaire</string>
    <string name="activity_fiche_produit_TxtUniteStock">Unité de stock</string>
    <string name="activity_fiche_produit_TxtLiMagasin">Magasin</string>
    <string name="activity_fiche_produit_TxtStockTitle">QUANTITE</string>
    <string name="activity_fiche_produit_TxtStockTitle02">VALEUR</string>
    <string name="activity_fiche_produit_TxtStockTitle03">ENTREES - SORTIES</string>
    <string name="activity_fiche_produit_TxtStockAlerte">Stock d\'alerte</string>
    <string name="produit_fragment_noStock">Pas de fiche de stock - Produit Hors Stock</string>
    <string name="fiche_devis_activity_TxtDevStatuTitle">Statut</string>
    <string name="fiche_devis_activity_TxtDevLimagTitle">Magasin</string>
    <string name="activity_fiche_produit_TxtLilivTitle">Livreur</string>
    <string name="activity_fiche_produit_TxtMontantHtTitle">Total H.T.</string>
    <string name="activity_fiche_produit_FabCommentaires">Commentaires</string>
    <string name="activity_fiche_produit_TxtProduits">PRODUITS</string>
    <string name="activity_fiche_devis_TxtDevNudev">N° devis</string>
    <string name="item_detail_devis_TxtTxRemTitle">Tx Remise</string>
    <string name="item_detail_devis_TxtVaRemTitle">Mt Remise</string>
    <string name="item_detail_devis_TxtProduit">Produit</string>
    <string name="item_detail_devis_TxtQuantite">Quantité</string>
    <string name="item_detail_devis_TxtPrixUnitaire">P.U.</string>
    <string name="comment_poste_full_dialog_setTitle">Commentaires de poste</string>
    <string name="commentaires_devis_full_dialog_setTitle">Commentaires - Post-It</string>
    <string name="activity_ass_devis_MbSpinnerClient">Client <font color='#FF0000'>*</font></string>
    <string name="add_devis_activity_MbSpnLieuv">Lieu de vente <font color='#FF0000'>*</font></string>
    <string name="add_devis_activity_MbSpnDevMag">Magasin <font color='#FF0000'>*</font></string>
    <string name="add_devis_activity_EdtDevDadev">Date devis <font color='#FF0000'>*</font></string>
    <string name="add_devis_activity_EdtDevRfdev">Référence</string>
    <string name="add_devis_activity_MbSpnDevColiv">Livreur <font color='#FF0000'>*</font></string>
    <string name="add_devis_activity_MbSpnDevDereg">Délai</string>
    <string name="add_devis_activity_MbSpnDevMoreg">Mode Règlement</string>
    <string name="add_devis_activity_EdtDevDaliv">Date Livraison <font color='#FF0000'>*</font></string>
    <string name="add_devis_activity_EdtDevTxrem">Remise Globale</string>
    <string name="add_devis_activity_EdtDevTxesc">Escompte</string>
    <string name="add_devis_activity_EdtDevEcova">Eco-Participation</string>
    <string name="add_devis_activity_MbSpnDevUscom">Commercial</string>
    <string name="activity_add_devis_BtnValider_hint">SUIVANT</string>
    <string name="DexTexteHint">Post-it</string>
    <string name="post_it_devis_full_dialog_setTitle">Post-It - Commentaires</string>
    <string name="add_produit_devis_activity_TxtDevNudevTitle">Numéro devis</string>
    <string name="EdtDevTxnEn">Commentaires En-tête</string>
    <string name="EdtDevTxnPd">Commentaires Pied</string>
    <string name="noProductAddedText">Aucun produit</string>
    <string name="activity_add_produit_devis_BtnValider_hint">VALIDER</string>
    <string name="devis_add_produit_full_dialog_SchSTextHint">Produit</string>
    <string name="devis_add_produit_full_dialog_MbSpnUnvteTextHint">Unité de vente</string>
    <string name="devis_add_produit_full_dialog_EdtDdvCofvt">Coefficient</string>
    <string name="devis_add_produit_full_dialog_EdtDdvQtpro">Quantité</string>
    <string name="devis_add_produit_full_dialog_setTitle">Choix de produits</string>
    <string name="devis_add_produit_full_dialog_fields_error">Veuillez remplir tous les champs</string>
    <string name="DeleteAlertDialogFragment_Title">Confirmation</string>
    <string name="alert_dialog_ok">Oui</string>
    <string name="alert_dialog_cancel">Non</string>
    <string name="alert_dialog_message">Voulez vous supprimer ce produit?</string>
    <string name="TxtClirasoc_text">Client:</string>
    <string name="TxtComDalivTitle_text">Livraison</string>
    <string name="TxtComVacomTitle_text">Valeur H.T.</string>
    <string name="item_commande_TxtNumeroCommande">Numéro</string>
    <string name="TxtDateCommandeTitle">Date</string>
    <string name="TxtLieuVenteText">Lieu Vente</string>
    <string name="TxtTourneeText">Tournée</string>
    <string name="TxtNoCdeError">Aucune commande !</string>
    <string name="TxtFacturationText">ADRESSE FACTURATION</string>
    <string name="activity_commande_details_TxtComAdre1_Text">Adresse</string>
    <string name="activity_commande_details_TxtComAdresse_Text">Adresse</string>
    <string name="activity_commande_details_TxtCp">C.P.</string>
    <string name="activity_commande_details_TxtVille">Ville</string>
    <string name="activity_commande_details_TxtBp">B.P.</string>
    <string name="activity_commande_details_TxtPays">Pays</string>
    <string name="TxtLivraisonText">Solde Compte</string>
    <string name="TxtPlafondText">Plafond</string>
    <string name="item_detail_commande_TxtQuantiteLivree">Qte Livrée</string>
    <string name="ms_next">Suivant</string>
    <string name="ms_back">Précédent</string>
    <string name="ms_complete">Terminer</string>
    <string name="fragment_entete_MbSpinnerClient">Client </string>
    <string name="fragment_entete_MbSpnCliLieuv">Lieu de vente</string>
    <string name="add_commande_activity_MbSpnComComag">Magasin <font color='#FF0000'>*</font></string>
    <string name="add_commande_activity_EdtComDacom">Date Commande <font color='#FF0000'>*</font></string>
    <string name="add_commande_activity_EdtComNamar">Marchandises</string>
    <string name="add_commande_activity_MbSpnComCotrn">Tournée <font color='#FF0000'>*</font></string>
    <string name="add_commande_activity_EdtComDaliv">Date Livraison <font color='#FF0000'>*</font></string>
    <string name="add_commande_activity_MbSpnComColiv">Livreur <font color='#FF0000'>*</font></string>
    <string name="add_commande_activity_MbSpnComCotrp">Transport <font color='#FF0000'>*</font></string>
    <string name="add_commande_activity_StepTitle">Données générales</string>
    <string name="add_commande_activity_StepTitleFacturation">Facturation</string>
    <string name="fragment_adresse_facturation_EdtComRasoc">Raison Sociale</string>
    <string name="fragment_adresse_livraison_StepTitleLivraison">Livraison</string>
    <string name="fragment_adresse_livraison_EdtComRasol">Raison Sociale</string>
    <string name="fragment_adresse_livraison_EdtComAdr1l">Adresse 1</string>
    <string name="fragment_adresse_livraison_EdtComAdr2l">Adresse 2</string>
    <string name="fragment_adresse_livraison_EdtComCopol">Code Postal</string>
    <string name="fragment_adresse_livraison_EdtComVilll">Ville</string>
    <string name="fragment_adresse_livraison_EdtComBopol">B.P.</string>
    <string name="fragment_adresse_livraison_MbSpnComCpayl">Pays</string>
    <string name="fragment_reglement_StepTitleReglement">Données de Règlement</string>
    <string name="fragment_reglement_MbSpnComMoreg">Règlement</string>
    <string name="fragment_reglement_MbSpnComDereg">Délai</string>
    <string name="fragment_reglement_EdtComTxrem">Remise Globale</string>
    <string name="fragment_reglement_EdtComTxesc">Escompte</string>
    <string name="fragment_reglement_EdtComEcova">Eco-Participation</string>
    <string name="fragment_reglement_MbSpnComUscom">Commercial</string>
    <string name="fragment_reglement_StepTitleContact">Contact</string>
    <string name="fragment_reglement_EdtComTelep">Téléphone</string>
    <string name="fragment_reglement_EdtComIdcor">Correspondant</string>
    <string name="serveur_node_fragment_BtnSuivant_hint">Suivant</string>
    <string name="serveur_node_fragment_BtnPrec_hint">Précédent</string>
    <string name="serveur_node_fragment_BtnTerminer_hint">Terminer</string>
</resources>