<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:theme="@style/MontserratTextViewStyle"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_client"
            android:icon="@drawable/ic_baseline_people_24_black"
            android:title="@string/menu_client" />
        <item
            android:id="@+id/nav_produit"
            android:icon="@drawable/ic_baseline_widgets_24_black"
            android:title="@string/menu_produit" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_devis"
            android:icon="@drawable/ic_baseline_list_alt_24_black"
            android:title="@string/menu_devis" />
        <item
            android:id="@+id/nav_commande"
            android:icon="@drawable/ic_baseline_shopping_cart_24_black"
            android:title="@string/menu_commande" >
        </item>
    </group>
</menu>