<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/StepTitleReglement"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/teal"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="14sp"
            android:text="@string/fragment_reglement_StepTitleReglement"
            android:layout_height="wrap_content"></TextView>

        <!--Règlement - Délai-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Règlement-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/searchable_spinner_style"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/MbSpnComMoreg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/filter_produit_full_dialog_fragment_MbSpnFamille_MarginTop"
                    android:layout_marginRight="@dimen/filter_produit_full_dialog_fragment_MbSpnFamille_MarginTop"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/fragment_reglement_MbSpnComMoreg"
                    app:met_floatingLabel="normal"
                    app:met_hideUnderline="true"
                    app:met_textColor="@color/black"
                    app:met_textColorHint="@color/black" />
            </LinearLayout>

            <!--Délai-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/searchable_spinner_style"
                android:layout_weight="1"
                android:orientation="vertical">
                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/MbSpnComDereg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/filter_produit_full_dialog_fragment_MbSpnFamille_MarginTop"
                    android:layout_marginRight="@dimen/filter_produit_full_dialog_fragment_MbSpnFamille_MarginTop"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/fragment_reglement_MbSpnComDereg"
                    app:met_floatingLabel="normal"
                    app:met_hideUnderline="true"
                    app:met_textColor="@color/black"
                    app:met_textColorHint="@color/black" />
            </LinearLayout>

        </LinearLayout>
        <!--Remise Globale - Escompte-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <!--Remise Globale-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:hint="@string/fragment_reglement_EdtComTxrem"
                android:inputType="number"
                app:boxBackgroundColor="@color/white"
                android:singleLine="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EdtComTxrem"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--Remise Globale-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/fragment_reglement_EdtComTxesc"
                android:inputType="number"
                app:boxBackgroundColor="@color/white"
                android:singleLine="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EdtComTxesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!--Eco-Participation - Commercial-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Eco-Participation-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/fragment_reglement_EdtComEcova"
                android:layout_weight="1"
                android:inputType="number"
                app:boxBackgroundColor="@color/white"
                android:singleLine="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EdtComEcova"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
        <TextView
            android:id="@+id/StepTitleContact"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/teal"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="14sp"
            android:text="@string/fragment_reglement_StepTitleContact"
            android:layout_height="wrap_content"></TextView>

        <!--Commercial-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/searchable_spinner_style"
            android:orientation="vertical">
            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/MbSpnComUscom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/filter_produit_full_dialog_fragment_MbSpnFamille_MarginTop"
                android:layout_marginRight="@dimen/filter_produit_full_dialog_fragment_MbSpnFamille_MarginTop"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/fragment_reglement_MbSpnComUscom"
                app:met_floatingLabel="normal"
                app:met_hideUnderline="true"
                app:met_textColor="@color/black"
                app:met_textColorHint="@color/black" />
        </LinearLayout>

        <!--Eco-Participation-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/fragment_reglement_EdtComTelep"
            android:inputType="number"
            app:boxBackgroundColor="@color/white"
            android:singleLine="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EdtComTelep"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Correspondant-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/fragment_reglement_EdtComIdcor"
            android:inputType="number"
            app:boxBackgroundColor="@color/white"
            android:singleLine="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EdtComIdcor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular" />
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="16dp">

            <!--Précédent-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/BtnPrec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/serveur_node_fragment_BtnPrec_hint"
                android:layout_alignParentLeft="true"
                android:textSize="16sp"
                android:padding="8dp"
                app:cornerRadius="@dimen/login_activity_BtnConnexion_cornerRadius"
                android:textAllCaps="false"
                app:icon="@drawable/ic_baseline_keyboard_arrow_left_24"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:textColor="@color/teal" />

            <!--Suivant-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/BtnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/serveur_node_fragment_BtnTerminer_hint"
                android:layout_alignParentRight="true"
                android:textSize="16sp"
                android:padding="8dp"
                app:cornerRadius="@dimen/login_activity_BtnConnexion_cornerRadius"
                android:textAllCaps="false"
                app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:textColor="@color/teal" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>