<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/StepTitleLivraison"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="17sp"
            android:text="@string/fragment_adresse_livraison_StepTitleLivraison"
            android:layout_height="wrap_content"></TextView>
        <!--Raison Sociale-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/fragment_adresse_livraison_EdtComRasol"
            app:errorEnabled="true"
            android:singleLine="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EdtComRasol"
                android:layout_width="fill_parent"
                android:textIsSelectable="true"
                android:inputType="none"
                android:focusable="false"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Adresse 1-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/fragment_adresse_livraison_EdtComAdr1l"
            app:errorEnabled="true"
            android:singleLine="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EdtComAdr1l"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Adresse 2-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/fragment_adresse_livraison_EdtComAdr2l"
            app:errorEnabled="true"
            android:singleLine="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EdtComAdr2l"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--CP - Ville-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Code Postal-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:hint="@string/fragment_adresse_livraison_EdtComCopol"
                app:errorEnabled="true"
                android:singleLine="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EdtComCopol"
                    android:inputType="number"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Code Postal-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.4"
                android:hint="@string/fragment_adresse_livraison_EdtComVilll"
                app:errorEnabled="true"
                android:singleLine="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EdtComVilll"
                    android:inputType="text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!--BP - Pays-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Boîte Postale-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:hint="@string/fragment_adresse_livraison_EdtComBopol"
                app:errorEnabled="true"
                android:singleLine="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EdtComBopol"
                    android:inputType="number"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Pays-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.4"
                android:background="@drawable/spinner_style"
                android:orientation="vertical">

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/MbSpnComCpayl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/filter_produit_full_dialog_fragment_MbSpnFamille_MarginTop"
                    android:layout_marginRight="@dimen/filter_produit_full_dialog_fragment_MbSpnFamille_MarginTop"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/fragment_adresse_livraison_MbSpnComCpayl"
                    app:met_floatingLabel="normal"
                    app:met_hideUnderline="true"
                    app:met_textColor="@color/black"
                    app:met_textColorHint="@color/black" />
            </LinearLayout>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="16dp">

            <!--Précédent-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/BtnPrec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/serveur_node_fragment_BtnPrec_hint"
                android:layout_alignParentLeft="true"
                android:textSize="16sp"
                android:padding="8dp"
                app:cornerRadius="@dimen/login_activity_BtnConnexion_cornerRadius"
                android:textAllCaps="false"
                app:icon="@drawable/ic_baseline_keyboard_arrow_left_24"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:textColor="@color/colorPrimary" />

            <!--Suivant-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/BtnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/serveur_node_fragment_BtnSuivant_hint"
                android:layout_alignParentRight="true"
                android:textSize="16sp"
                android:padding="8dp"
                app:cornerRadius="@dimen/login_activity_BtnConnexion_cornerRadius"
                android:textAllCaps="false"
                app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>